<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fit Me Up</string>
    <string name="settings_locale_title">Language</string>
    <string name="settings_button">Settings</string>
    <string name="hello_world">Hello World!</string>

    <string-array name="language_names">
        <item>German</item>
        <item>English</item>
    </string-array>

    <string-array name="language_id">
        <item>de</item>
        <item>en</item>
    </string-array>

    <string-array name="notification_names">
        <item>Never</item>
        <item>1x a day</item>
        <item>2x a day</item>
    </string-array>

    <string-array name="notification_id">
        <item>nv</item>
        <item>1tms</item>
        <item>2tms</item>
    </string-array>

    <string-array name="frequency_names">
        <item>High frequency</item>
        <item>Normal frequency (default)</item>
        <item>Low frequency</item>
    </string-array>

    <string-array name="frequency_id">
        <item>high</item>
        <item>normal</item>
        <item>low</item>
    </string-array>

    <string name="bottom_home">Home</string>
    <string name="bottom_graphs">Activities</string>
    <string name="bottom_activities">Manage</string>
    <string name="bottom_settings">Settings</string>

    <string name="notification_title">Daily Query</string>
    <string name="notification_text">Do you want to tell us how you are feeling today?</string>
    <string name="settings_notifications_description">Frequency of notifications</string>
    <string name="settings_notifications_summary">Choose how often you want to get notifications.</string>
    <string name="settings_frequency_description">Set sensor-frequency</string>
    <string name="settings_frequency_summary">This option affects the battery life (higher frequency = higher battery drain)</string>
    <string name="settings_feedback_title">Send feedback</string>
    <string name="settings_feedback_description">Report technical issues or suggest new features</string>
    <string name="mood_button">Mood</string>
    <string name="mood_next">Next</string>
    <string name="mood_back">Back</string>
    <string name="mood_feelings_in_the_last_24_hours_I_felt_on_average">In the last 24 hours I felt on average...</string>
    <string name="mood_feelings_unsatisfied">Unsatisfied</string>
    <string name="mood_feelings_satisfied">Satisfied</string>
    <string name="mood_feelings_well">Well</string>
    <string name="mood_feelings_unwell">Unwell</string>
    <string name="mood_feelings_troubled">Troubled</string>
    <string name="mood_feelings_calm">Calm</string>
    <string name="mood_rating_text">0%</string>
    <string name="mood_feelings_awake">Awake</string>
    <string name="mood_feelings_tired">Tired</string>
    <string name="mood_feelings_energy_less">Powerless</string>
    <string name="mood_feelings_energetic">Energetic</string>
    <string name="mood_feelings_tense">Tense</string>
    <string name="mood_feelings_relaxed">Relaxed</string>
    <!-- Mood_Event Appraisal-->
    <string name="mood_event_appraisel">Event Appraisel:</string>
    <string name="mood_Have_you_experienced_one_or_more_negative_events_since_the_last_query_How_intense_was_the_most_significant_negative_event">Have you experienced one or more negative events since the last query?
        How intense was the most important negative event? </string>
    <string name="mood_Have_you_experienced_one_or_more_positive_events_since_the_last_query_How_intense_was_the_most_significant_positive_event">Have you experienced one or more positive events since the last query?
        How intense was the most important positive event?</string>

    <!-- Mood_Social Context-->
    <string name="mood_social_context">Social Context:</string>
    <string name="mood_yes">Yes</string>
    <string name="mood_no">No</string>
    <string name="mood_Are_you_alone_right_now">Are you alone now?</string>
    <string name="mood_What_kind_of_people_are_you_surrounded_by_at_the_moment">What kind of people are you surrounded by at the moment?</string>
    <string name="mood_When_you_think_about_the_people_who_are_surrounding_you_right_now_to_what_extent_is_the_following_statement_true_I_do_not_like_these_people">When you think of the people you are surrounded,
        how does the following statement apply? I do not like these people! </string>
    <string-array name="persons">
        <item>Select from: </item>
        <item>Partner</item>
        <item>Family</item>
        <item>Friends</item>
        <item>co-worker</item>
        <item> Foreign</item>
    </string-array>

    <!-- Mood_Context-->
    <string name="mood_context">Context:</string>
    <string name="mood_Where_are_you_right_now">Where are you right now?</string>
    <string name="mood_write_here">Write here..</string>
    <string-array name="context">
        <item>Select from: </item>
        <item>At home</item>
        <item>Work</item>
        <item>Sport</item>
        <item>Other hobby</item>
        <item>Shopping</item>
        <item>Visit</item>
        <item>Others</item>
    </string-array>

    <!-- Mood_Selbst_Wert-->
    <string name="mood_self_worth">Self Worth:</string>
    <string name="mood_At_present_I_am_satisfied_with_myself">At present I am satisfied with myself</string>
    <string name="mood_At_the_moment_I_consider_myself_a_failure">At the moment I consider myself a failure</string>
    <string name="mood_rating_self_worth">0.0</string>

    <!-- Mood_Impulsivity-->
    <string name="mood_impulsivity">Impulsivity:</string>
    <string name="mood_Since_the_last_query_I_have_acted_impulsively_i.e._I_have_acted_without_thinking_about_possible_consequences">
        Since the last query, I have acted impulsively, i.e., I have acted without thinking about possible consequences
</string>
    <string name="mood_Since_the_last_query_I_have_behaved_angrily_or_aggressively_towards_another_person_which_I_was_sorry_for_afterwards">
        Since the last query, I have behaved in an angry or aggressive manner towards another person which I was sorry for afterwards </string>
    <string name="mood_0_strongly_disagree">strongly disagree</string>
    <string name="mood_1_disagree">disagree</string>
    <string name="mood_2_slightly_disagree">slightly disagree</string>
    <string name="mood_3_either">either</string>
    <string name="mood_4_slightly_agree">slightly agree</string>
    <string name="mood_5_agree">agree</string>
    <string name="mood_6_strongly_agree">strongly agree</string>

    <string name="mood_You_can_add_some_notes_about_your_current_mood_here">
        You can add some notes about your current mood here</string>

    <!-- mood_add_notes-->
    <string name="mood_your_mood_was_recorded">Your mood was recorded ^-^</string>
    <string name="mood_Thanks_for_your_time">Thanks for your time</string>
    <string name="mood_done">Done</string>
    <string name="mood_record_button">Mood Record</string>
    <string name="mood_notification_button">Notification</string>

    <string name="physical_main_button">Physical Activity</string>
    <string name="day_button">Day</string>
    <string name="week_button">Week</string>
    <string name="month_button">Month</string>
    <string name="physical_activity_button">Physical Activities</string>
    <string name="physical_manage_activities_button">Manage Activities</string>
    <string name="physical_settings_button">Settings</string>

    <string-array name="weekdays">
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
        <item>Su</item>
    </string-array>

    <string name="week">Week</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="achievements">Achievements</string>
    <string name="physical_recordactivity">Record Activity</string>
    <string name="physical_stopactivity">Stop Activity</string>
    <string name="survey_button">Daily Survey</string>
    <string name="physical_overview">Display Physical</string>
    <string name="mood_overview">Display Mood</string>

    <string name="data_notification">Your data is being collected.</string>

    <string name="privacy_policy">PRIVACY POLICY [PLACEHOLDER]</string>
    <string name="privacy_policy_text">DEMO PRIVACY POLICY:\n\n

        Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Nulla tristique elit in arcu blandit rhoncus. Phasellus ipsum lacus,
        lacinia vel metus in, laoreet tempor massa. Etiam dignissim lectus vitae arcu convallis,
        ut dignissim neque ullamcorper. Nullam porta, elit sed condimentum tincidunt, mauris ligula
        malesuada odio, sit amet semper quam quam et augue.\n
        Morbi eu libero nec neque suscipit
        consectetur sed vel tortor. Etiam rhoncus ante nec lacus tristique egestas.
        Maecenas vitae est fermentum sapien tincidunt ultrices ut non magna.\n
        Vestibulum ac sodales
        ligula, nec egestas eros. Donec nec mollis elit. Nullam venenatis commodo est eget varius.
        Donec pulvinar est vel bibendum sollicitudin. Phasellus ac facilisis est.\n

        Nulla venenatis, ex at porttitor dictum, neque arcu bibendum metus, ac pretium velit risus
        in leo. Etiam vulputate mauris at tortor viverra sodales. Vivamus efficitur magna eget velit
        fringilla, aliquam ullamcorper augue suscipit.\n
        Aliquam ex nisl, laoreet in ultricies a,
        pulvinar sit amet arcu. Cras bibendum nibh efficitur quam consectetur mattis. Vivamus quis
        arcu maximus, tristique felis a, hendrerit augue.\n
        Pellentesque suscipit, erat ac gravida
        accumsan, quam leo placerat nunc, at suscipit arcu ligula nec sem. Donec lacinia sapien
        vitae quam varius venenatis. Pellentesque viverra odio quis erat viverra pretium.\n
        Quisque pulvinar sed velit eget mattis. Mauris sit amet arcu nisl. Fusce et sapien sit amet
        augue sollicitudin feugiat eget lobortis ex. Quisque pharetra lacus non maximus sollicitudin.\n

        Nulla sagittis commodo mi, at vehicula ante. Nunc et tempor odio, sed efficitur metus.
        Ut sit amet neque sollicitudin, dignissim felis id, posuere augue.\n
        Curabitur malesuada
        ultricies neque, sed dapibus leo porta a. Donec semper enim a ullamcorper malesuada.
        Quisque tempus lectus a erat viverra facilisis.\n
        Etiam nec risus nunc. Nam sed neque sit amet
        magna viverra ultrices. Proin ut consectetur velit.\n
        Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Aenean commodo efficitur ante sed auctor. Suspendisse tristique elit risus,
        eget fermentum neque rhoncus eu.</string>

</resources>