<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_home" />
    <item
        android:id="@+id/bottom_graphs"
        android:icon="@drawable/ic_baseline_event_note_24"
        android:title="@string/bottom_graphs" />
    <item
        android:id="@+id/bottom_activities"
        android:icon="@drawable/ic_baseline_directions_run_24"
        android:title="@string/bottom_activities" />
    <item
        android:id="@+id/bottom_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/bottom_settings" />
</menu>