<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".mood.Context">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="317dp"
        android:layout_height="43dp"
        android:text="@string/mood_Where_are_you_right_now"
        android:textColor="#0E0E0E"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/Context"
        android:layout_width="239dp"
        android:layout_height="47dp"
        android:text="@string/mood_context"
        android:textColor="#0E0E0E"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:hint="@string/mood_write_here"
        android:minHeight="48dp"
        android:visibility="gone"
        tools:textSize="14sp" />

    <Spinner
        android:id="@+id/spinner_context"
        android:layout_width="243dp"
        android:layout_height="55dp"
        android:entries="@array/context"
        tools:ignore="SpeakableTextPresentCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_back" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next_button_context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_next" />
    </LinearLayout>

</LinearLayout>