<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mood.AddNotesActivity">

    <TextView
        android:id="@+id/add_notes"
        android:layout_width="363dp"
        android:layout_height="54dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:autoSizeTextType="uniform"
        android:text="@string/mood_You_can_add_some_notes_about_your_current_mood_here"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/notes_text_view"
        android:layout_width="303dp"
        android:layout_height="197dp"
        android:layout_marginTop="36dp"
        android:text="@string/mood_write_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_notes" />

    <Button
        android:id="@+id/back_button_addnotes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/mood_back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button_addnotes"
        android:text="@string/mood_next"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="476dp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"/>

</androidx.constraintlayout.widget.ConstraintLayout>